<resources>
    <string name="app_name">eBuy</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_valid">Enter a valid </string>
    <string name="username_taken">Username already taken</string>
    <string name="login">Login</string>
    <string name="username_exist">Username doesn\'t exist</string>
    <string name="password_incorrect">Password incorrect, try again</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="price">Price: $</string>
    <string name="quantity">Quantity:</string>
    <string name="one">1</string>
    <string name="buy">Buy</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="admin">Admin</string>
    <string name="order_history">Order History</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="bought">bought</string>
    <string name="added_to_shopping_cart">added to the Shopping Cart</string>
    <string name="removed_from_sc">removed from Shopping Cart</string>
    <string name="log_out">Log Out</string>
    <string name="no_orders_found">No orders found</string>
    <string name="no_items_in_sc">No products in shopping cart</string>
    <string name="product_list">Product List</string>
    <string name="confirm_logout">Are you sure, you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="users">Users</string>
    <string name="products">Products</string>
    <string name="requested">Requested</string>
    <string name="self_user_delete">You can\'t remove your account</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="user_deleted_success">removed successfully</string>
    <string name="product_does_not_exist">Product does not exist</string>
    <string name="price_only">Price</string>
    <string name="quantity_only">Quantity</string>
    <string name="change">Change</string>
    <string name="exit">Exit</string>
    <string name="checkout">Checkout</string>
    <string name="products_checked_out">All products checked out</string>
    <string name="self_user_admin_status">You can\'t change your admin status</string>
    <string name="admin_status_changed">admin status changed successfully</string>
    <string name="add">Add</string>
    <string name="search_product">Search Product Name</string>
    <string name="added_success">added successfully</string>
    <string name="product_out_of_stock">Product out of stock</string>
</resources>