<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activites.Landing_Page">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="?attr/colorOnPrimary"
        app:strokeColor="?attr/strokeColor"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bottom_sheet_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/first_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />


            <LinearLayout
                android:id="@+id/bottom_sheet_landing_page_button_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet_landing_page_search_card_view"
                app:layout_constraintVertical_bias="0.0">

                <Button
                    android:id="@+id/bottom_sheet_product_list_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:text="@string/product_list"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bottom_sheet_order_history_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:text="@string/order_history"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.073"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bottom_sheet_product_list_button"
                    app:layout_constraintVertical_bias="0" />

                <Button
                    android:id="@+id/bottom_sheet_shopping_cart_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:text="@string/shopping_cart"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.07"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bottom_sheet_order_history_button"
                    app:layout_constraintVertical_bias="0" />

            </LinearLayout>

            <Button
                android:id="@+id/bottom_sheet_logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet_landing_page_button_linear_layout"
                app:layout_constraintVertical_bias="0" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/bottom_sheet_user_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05">

                <Button
                    android:id="@+id/bottom_sheet_admin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/admin"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bottom_sheet_checkout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/checkout"
                    android:visibility="gone" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/bottom_sheet_landing_page_search_card_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:visibility="visible"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet_user_name"
                app:layout_constraintVertical_bias="0">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/search" />

                <EditText
                    android:id="@+id/bottom_sheet_landing_page_search"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/search_product"
                    android:inputType="textShortMessage"
                    android:maxLines="1"
                    android:src="@drawable/search"
                    android:textSize="15sp" />


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>